<resources>
    <string name="app_name">Ma réu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pick_a_date">Meeting date</string>
    <string name="starting_hour">Starting hour :</string>
    <string name="ending_hour">Ending hour :</string>
    <string name="select_room">Meeting room :\u0020</string>
    <string name="list_of_participants">Select participants :</string>
    <string name="specify_a_subject">Specify a subject</string>
    <string name="register_new_meeting">Register meeting</string>
    <string name="separator">\u0020-\u0020</string>
    <string name="unavailable_rooms">Unavailable Rooms :</string>
    <string name="subject_is_empty">You must specify a subject !</string>
    <string name="no_rooms_selected">"You must choose a meeting room"</string>
    <string name="no_participant_selected">"You must select at least one participant"</string>
    <string name="from">From :\u0020</string>
    <string name="to">\u0020to\u0020</string>
    <string name="meeting_room">Meeting Room :\u0020</string>
    <string name="participants">Participants :\u0020</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="click_on_a_meeting">Click on a meeting in the list to show details</string>
</resources>