<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AddMeetingActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_date_addmeetingactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundTint="@color/black"
        android:hint="@string/pick_a_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputEditText_date_addmeetingactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            />
       </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_starthour_addmeetingactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:foregroundTint="@color/black"
        android:hint="@string/starting_hour"
        app:layout_constraintEnd_toStartOf="@id/outlinedTextField_endhour_addmeetingactivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_date_addmeetingactivity"
        android:layout_margin="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputEditText_starthour_addmeetingactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_endhour_addmeetingactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="0.5"
        android:foregroundTint="@color/black"
        android:hint="@string/ending_hour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/outlinedTextField_starthour_addmeetingactivity"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_date_addmeetingactivity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputEditText_endhour_addmeetingactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal"

             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_subject_addmeetingactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundTint="@color/black"
        android:hint="@string/specify_a_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_starthour_addmeetingactivity"
        android:layout_margin="16dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputEditText_subject_addmeetingactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_menu_rooms_addmeetingactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_room"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_subject_addmeetingactivity">

        <AutoCompleteTextView
            android:id="@+id/autoComplete_rooms_addmeetingactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_users_addmeetingactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"

        android:foregroundTint="@color/black"
        android:hint="@string/list_of_participants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dropdown_menu_rooms_addmeetingactivity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputEditText_users_addmeetingactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal"
            android:lines="@integer/material_motion_duration_long_1"

            android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/outlinedButton_create_addmeetingactivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create a new Meeting"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField_users_addmeetingactivity"
        style="?attr/materialButtonOutlinedStyle"
        />


</androidx.constraintlayout.widget.ConstraintLayout>